--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
 body {
+    background: none!important;
+    background-color: ghostwhite!important;
+    height: 100vh;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -11,3 +14,46 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.logo {
+    font-family: 'Bungee Shade', cursive;
+    position: left;
+
+    margin-left: 50px;
+    top: 50%;
+    margin-top: -50px;
+    font-size: 50px;
+    color: palevioletred;
+}
+
+/* .App {
+    background-color: ghostwhite;
+} */
+
+/* Buttons */
+.ui.fluid.button {
+    background-color:palevioletred;
+    color: #fff;
+}
+
+.ui.right.floated.button {
+    background-color:palevioletred;
+    color: #fff;
+}
+
+.ui.two.bottom.attached.buttons {
+    background-color:palevioletred;
+    color: #fff;
+}
+
+.ui.button {
+    background-color:palevioletred;
+    color: #fff;
+}
+
+button:hover{
+    background-color: lightpink!important;
+    color: #fff !important;
+}
+
+
